<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>wand555.github.io</groupId>
  <artifactId>Challenges</artifactId>
  <version>alpha-0.0.3</version>
  <packaging>jar</packaging>

  <name>Challenges</name>

  <properties>
    <java.version>21</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
    <profiles>
        <profile>
            <id>plugin</id>
            <dependencies>
                <dependency>
                    <groupId>dev.jorel</groupId>
                    <artifactId>commandapi-bukkit-shade</artifactId>
                    <version>9.4.0</version>
                    <scope>provided</scope>
                </dependency>
                <dependency>
                    <groupId>io.papermc.paper</groupId>
                    <artifactId>paper-api</artifactId>
                    <version>1.20.4-R0.1-SNAPSHOT</version>
                    <scope>provided</scope>
                </dependency>
                <dependency>
                    <groupId>org.jsonschema2pojo</groupId>
                    <artifactId>jsonschema2pojo-core</artifactId>
                    <version>1.2.1</version>
                    <scope>provided</scope>
                </dependency>
                <dependency>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>3.1.1</version>
                </dependency>
                <dependency>
                    <groupId>com.github.erosb</groupId>
                    <artifactId>everit-json-schema</artifactId>
                    <version>1.14.4</version>
                    <scope>provided</scope>
                </dependency>
                <dependency>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-databind</artifactId>
                    <version>2.16.1</version>
                    <scope>provided</scope>
                </dependency>
                <dependency>
                    <groupId>com.helger.schematron</groupId>
                    <artifactId>ph-schematron-pure</artifactId>
                    <version>7.1.3</version>
                    <scope>provided</scope>
                </dependency>
                <dependency>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.3.0</version>
                </dependency>
                <dependency>
                    <groupId>com.github.seeseemelk</groupId>
                    <artifactId>MockBukkit-v1.20</artifactId>
                    <version>3.76.2</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.junit.jupiter</groupId>
                    <artifactId>junit-jupiter-api</artifactId>
                    <version>5.10.0</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.junit.jupiter</groupId>
                    <artifactId>junit-jupiter-engine</artifactId>
                    <version>5.10.0</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.mockito</groupId>
                    <artifactId>mockito-core</artifactId>
                    <version>5.9.0</version>
                    <scope>test</scope>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>e2e</id>
            <dependencies>
                <dependency>
                    <groupId>dev.jorel</groupId>
                    <artifactId>commandapi-bukkit-shade</artifactId>
                    <version>9.4.0</version>
                    <scope>compile</scope>
                </dependency>
                <dependency>
                    <groupId>io.papermc.paper</groupId>
                    <artifactId>paper-api</artifactId>
                    <version>1.20.4-R0.1-SNAPSHOT</version>
                    <scope>compile</scope>
                </dependency>
                <dependency>
                    <groupId>org.jsonschema2pojo</groupId>
                    <artifactId>jsonschema2pojo-core</artifactId>
                    <version>1.2.1</version>
                    <scope>compile</scope>
                </dependency>
                <dependency>
                    <groupId>com.github.erosb</groupId>
                    <artifactId>everit-json-schema</artifactId>
                    <version>1.14.4</version>
                    <scope>compile</scope>
                </dependency>
                <dependency>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-databind</artifactId>
                    <version>2.16.1</version>
                    <scope>compile</scope>
                </dependency>
                <dependency>
                    <groupId>com.helger.schematron</groupId>
                    <artifactId>ph-schematron-pure</artifactId>
                    <version>7.1.3</version>
                    <scope>compile</scope>
                </dependency>
                <dependency>
                    <groupId>com.github.seeseemelk</groupId>
                    <artifactId>MockBukkit-v1.20</artifactId>
                    <version>3.76.2</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.junit.jupiter</groupId>
                    <artifactId>junit-jupiter-api</artifactId>
                    <version>5.10.0</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.junit.jupiter</groupId>
                    <artifactId>junit-jupiter-engine</artifactId>
                    <version>5.10.0</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.mockito</groupId>
                    <artifactId>mockito-core</artifactId>
                    <version>5.9.0</version>
                    <scope>test</scope>
                </dependency>
            </dependencies>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jar-plugin</artifactId>
                        <version>3.3.0</version>
                        <configuration>
                            <finalName>PluginValidation</finalName>
                            <outputDirectory>${project.basedir}/generated_jar</outputDirectory>
                            <archive>
                                <manifest>
                                    <addClasspath>true</addClasspath>
                                    <classpathPrefix>${project.build.finalName}.lib/</classpathPrefix>
                                    <mainClass>wand555.github.io.challenges.validation.OnlyValidation</mainClass>
                                </manifest>
                            </archive>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
  <build>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-resources-plugin</artifactId>
            <version>3.3.1</version>
            <configuration>
                <encoding>UTF-8</encoding>
            </configuration>
        </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>21</source>
          <target>21</target>
            <compilerArgs>--enable-preview</compilerArgs>
            <release>21</release>
        </configuration>
      </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.1.2</version>
            <configuration>
                <testFailureIgnore>true</testFailureIgnore>
            </configuration>
        </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.6.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
              <configuration>
                  <minimizeJar>true</minimizeJar>
                  <filters>
                      <filter>
                          <artifact>*:*</artifact>
                          <excludes>
                              <exclude>META-INF/*.SF</exclude>
                              <exclude>META-INF/*.DSA</exclude>
                              <exclude>META-INF/*.RSA</exclude>
                          </excludes>
                      </filter>
                  </filters>
              </configuration>
          </execution>
        </executions>
      </plugin>
        <plugin>
            <groupId>org.jsonschema2pojo</groupId>
            <artifactId>jsonschema2pojo-maven-plugin</artifactId>
            <version>1.2.1</version>
            <configuration>
                <sourceDirectory>${basedir}/src/main/resources/challenges_schema.json</sourceDirectory>
                <targetPackage>wand555.github.io.challenges.generated</targetPackage>
                <usePrimitives>true</usePrimitives>
                <includeJsr303Annotations>true</includeJsr303Annotations>
                <includeJsr305Annotations>true</includeJsr305Annotations>
                <useJakartaValidation>true</useJakartaValidation>
                <includeConstructors>true</includeConstructors>
                <includeAllPropertiesConstructor>true</includeAllPropertiesConstructor>
                <formatDates>true</formatDates>
                <formatTimes>true</formatTimes>
                <formatDateTimes>true</formatDateTimes>
            </configuration>
            <executions>
                <execution>
                    <goals>
                        <goal>generate</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>
        <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>3.1.1</version>
            <configuration>
                <mainClass>wand555.github.io.challenges.validation.OnlyValidation</mainClass>
            </configuration>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
            <version>3.3.0</version>
            <configuration>
                <outputDirectory>${project.basedir}/server/plugins</outputDirectory>
                <archive>
                    <manifest>
                        <addClasspath>true</addClasspath>
                        <classpathPrefix>${project.build.finalName}.lib/</classpathPrefix>
                        <mainClass>wand555.github.io.challenges.validation.OnlyValidation</mainClass>
                    </manifest>
                </archive>
            </configuration>
        </plugin>
    </plugins>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
  </build>

  <repositories>
      <repository>
          <id>minecraft-libraries</id>
          <name>Minecraft Libraries</name>
          <url>https://libraries.minecraft.net</url>
      </repository>
      <repository>
          <id>papermc-repo</id>
          <url>https://repo.papermc.io/repository/maven-public/</url>
      </repository>
      <repository>
          <id>sonatype</id>
          <url>https://oss.sonatype.org/content/groups/public/</url>
      </repository>
  </repositories>
</project>
